--- a/client/src/App.css
+++ b/client/src/App.css
@@ -88,7 +88,29 @@ body {
     padding: 10px;
     border-radius: 5px;
   }
-  
+ /* styles.css */
+
+nav a {
+    color: yellow;
+    text-decoration: none;
+    font-size: 18px;
+    transition: color 0.3s, text-decoration 0.3s;
+}
+
+linkStyle:hover  {
+    color: "yellow";
+    text-decoration: "none";
+    font-size: "18px";
+    transition: "color 0.3s";
+    background-color:  #007BFF
+};
+
+nav a:hover {
+    color: #007BFF; /* Change color on hover */
+    text-decoration: underline; /* Underline on hover */
+}
+
+
   .arrow {
     cursor: pointer;
     background-color: rgba(255, 255, 255, 0.8);
